--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=8fa0639a9eae86be240a79754bdbef16&plugin=AMap.LineSearch"></script>
     <title></title>
     <style type="text/css">
@@ -141,7 +142,6 @@
     var map = new AMap.Map('container', {
         resizeEnable: true,
         rotateEnable: true,
-        mapStyle: ['road'],
         zoom: 16
     });
     map.plugin('AMap.Geolocation', function() {
