--- a/test2.0.html
+++ b/test2.0.html
@@ -153,16 +153,17 @@
         }
         #search_header .fa-close {
             position: absolute;
-            color: #fff;
-            font-size: 1.5rem;
-            line-height: 2rem;
-            right: 1rem;
-            padding: 0.75rem 1rem;
+            color: #cccccc;
+            font-size: 12px;
+            line-height: 32px;
+            right: 11px;
+            padding: 0 1rem;
             top: 0;
+            box-sizing: border-box;
         }
         #search_body {
             position: absolute;
-            top: 3rem;
+            top: 100%;
             width: 100%;
             left: 0;
             background-color: #fff;
@@ -267,8 +268,9 @@
                 box-sizing: border-box;
             }
             #search {
-                background-color: #3d92fb;
-                height: 3.5rem;
+                background-color: #fff;
+                //height: 3.5rem;
+                height:42px;
             }
             #search_header {
                 height: 100%;
@@ -277,7 +279,7 @@
                 background-color: #3d92fb;
             }
             #search_keyword {
-                border: none;
+               /* border: none;
                 outline: 0;
                 width: 100%;
                 font-size: 1.5rem;
@@ -288,7 +290,15 @@
                 box-sizing: border-box;
                 background-color: #357fdb;
                 color: #fff;
-                border-radius: 5px;
+                border-radius: 5px;*/
+                border: none;
+                outline: 0;
+                font-size: 12px;
+                letter-spacing: 1px;
+                padding: 0 8px 0 37px;
+                border-radius: 14px;
+                box-sizing: border-box;
+                width: 100%;
             }
             #footer {
                 position: absolute;
@@ -301,6 +311,7 @@
                 position: absolute;
                 right: 0;
                 transform: translateY(-100%);
+                top: -10px;
             }
             #footer #radius:after{
                 clear:both;
@@ -341,22 +352,28 @@
                 box-sizing: border-box;
             }
             .collectionsList .collectionsListItem {
-                padding: 4px 6px;
+                padding: 7px 6px;
                 border-bottom: 1px solid #dddddd;
             }
-            #footer #stationLines, #footer #stationLines.less{
-                margin: 10px 0 0 0;
-                padding: 0 10px;
+            #footer #stationLines,.less #footer #stationLines{
+               /* margin: 10px 0 0 0;
+                padding: 18px 10px;
                 font-size: 1.5rem;
                 background-color: #fff;
                 color: #999;
                 webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
                 box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
                 overflow-y: auto;
+                max-height: 60vh;*/
+                padding: 0 10px;
+                font-size: 1.5rem;
+                color: #999;
+                overflow-y: auto;
                 max-height: 60vh;
+                position: relative;
             }
-            #footer #stationLines.more{
-                height: 212px;
+            .more #stationLines{
+                max-height: 212px;
                 overflow-y: auto;
             }
             #footer #stationLines > li{
@@ -371,7 +388,8 @@
                 right: 0;
             }
             #footer #stationLines > li .fa-star{
-                color: #f34234;
+                //color: #f34234;
+                color: #fcd94c;
             }
             #footer #stationLines > li > div{
                 padding: 6px 0;
@@ -410,16 +428,19 @@
                 padding: 0 10px;
                 display: none;
             }
-            #footer #stationLines.more + #control, #footer #stationLines.less + #control{
+            #footer .footer-stationLines.more + #control, #footer .footer-stationLines.less + #control{
                 display: block;
+                font-size: 22px;
+                color: #828282;
+                line-height: 18px;
             }
-            #footer #stationLines.hiden + #control{
+            #footer .footer-stationLines.hiden + #control{
                 display: none;
             }
-            #footer #stationLines.more  + #control > .less{
+            #footer .footer-stationLines.more  + #control > .less{
                 display: none;
             }
-            #footer #stationLines.less  + #control > .more{
+            #footer .footer-stationLines.less  + #control > .more{
                 display: none;
             }
             #footer #realTimeStation {
@@ -507,13 +528,13 @@
                 font-size: small;
             }
             #footer .footer_busInfo .from {
-                background-color: #0091ff;
+                background-color: #47c22a;
                 border-radius: 3px;
                 color: #fff;
                 margin-right: 6px;
             }
             #footer .footer_busInfo .to {
-                background-color: #ff6854;
+                background-color: #fd4848;
                 border-radius: 3px;
                 color: #fff;
                 margin-right: 6px;
@@ -535,11 +556,10 @@
                 padding-top: 10px;
             }
             .stationsBox li {
-                min-width: 2rem;
-                max-width: 2rem;
-                font-size: 1.5rem;
+                font-size: 15px;
+                max-width: 15px;
                 position: relative;
-                padding: 0 1em;
+                padding: 0 20px;
             }
             .stationsBox li i{
                 position: relative;
@@ -583,6 +603,93 @@
                 color: #3d92fb;
                 position: relative;
             }
+            .top_left-collection {
+                width: 3em;
+                display: inline-block;
+                background-color: #fff;
+                position: absolute;
+                padding: 3px 5px;
+                bottom: -9px;
+                transform: translate(11px,100%);
+                box-shadow: 0 0 4px rgba(0,0,100,.6);
+            }
+            .top_left-collection .fa {
+                display: block;
+                text-align: center;
+                color: #fcd94c;
+                font-size: 2.5em;
+            }
+            .top_left-collection .collectionsList {
+                position: absolute;
+                top: 100%;
+                color: #000;
+                left: -1px;
+                display: inline-block;
+                min-width: 200%;
+                background-color: #fff;
+                border: 1px solid #cccccc;
+                box-sizing: border-box;
+                transform: translateY(5px);
+                overflow: visible;
+            }
+            .top_left-collection .collectionsList:before {
+                content: '';
+                display: inline-block;
+                border: 5px solid transparent;
+                border-bottom-color: #cccccc;
+                position: absolute;
+                top: -11px;
+                left: 15px;
+            }
+            #search_header {
+                height: 100%;
+                margin-left: 0;
+                background-color: #fff;
+                padding-right: 13px;
+                display: flex;
+                align-items: center;
+            }
+            #search_header:before {
+                content: "\f002";
+                position: absolute;
+                left: 27px;
+                line-height: 42px;
+                color: #cccccc;
+                z-index: 1;
+            }
+            .search_header-buttom {
+                width: 65px;
+                height: 29px;
+                display: inline-block;
+                text-align: center;
+                line-height: 29px;
+                background-color: #39b8ef;
+                color: #fff;
+                -webkit-border-radius: 3px;
+                -moz-border-radius: 3px;
+                border-radius: 3px;
+            }
+            .footer-stationLines {
+                padding: 14px 0;
+                background-color: #fff;
+                -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+                box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            }
+            .footer-stationLines.less {
+                display: none;
+            }
+            .search_header-content {
+                flex-grow: 1;
+                position: relative;
+                margin: 5px 12px;
+                border: 1px solid #39b8ef;
+                border-radius: 14px;
+                height: 30px;
+                line-height: 32px;
+            }
+            #footer .stationLines-red {
+                color: #f34234;
+            }
         }
     </style>
 </head>
@@ -590,15 +697,21 @@
 <div id="container" style="width:100%;height:100%"></div>
 <div id="top_left">
     <div id="search">
-        <div id="back" class="fa fa-backward"></div>
-        <div id="search_header">
-            <input type="text" placeholder="搜索公交线路/公交站点/地名" id="search_keyword"/>
-            <i class="fa fa-close" id="searchInit"></i>
+        <div id="back" class="fa fa-backward hiden"></div>
+        <div id="search_header" class="fa">
+            <div class="search_header-content">
+                <input type="text" placeholder="搜索公交线路/公交站点/地名" id="search_keyword"/>
+                <i class="fa fa-close hiden" id="searchInit"></i>
+            </div>
+            <span class="search_header-buttom">搜索</span>
         </div>
         <div id="search_body" class="hiden"></div>
-        <span>收藏夹</span>
     </div>
     <div id="busInfoBox" class="hiden"></div>
+    <span class="top_left-collection">
+        <i class="fa fa-star"></i>收藏夹
+        <ul class="collectionsList hiden"></ul>
+    </span>
 </div>
 <div id="footer">
     <ul id="radius">
@@ -606,11 +719,13 @@
         <li value="1000">1km</li>
         <li value="500" class="active">500m</li>
     </ul>
-    <span id="collections"><i class="fa fa-star"></i>收藏夹
+    <span id="collections" class="hiden"><i class="fa fa-star"></i>收藏夹
         <ul class="collectionsList hiden"></ul>
     </span>
-    <ul id="stationLines" class="hiden">
-    </ul>
+    <div class="footer-stationLines hiden">
+        <ul id="stationLines">
+        </ul>
+    </div>
     <div id="control">
         <i class="fa fa-angle-double-down more"></i>
         <i class="fa fa-angle-double-up less"></i>
